--- a/package.json
+++ b/package.json
@@ -1,7 +1,1 @@
-{
-  "name": "smokin-v2",
-  "version": "1.0.0",
-  "dependencies": {
-    "axios": "^1.6.0"
-  }
-}
+{ "dependencies": { "axios": "^1.6.0" } }
